miniJava/src/MiniJavaParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MiniJavaParser.java */
import java.util.Vector;

  public class MiniJavaParser/*@bgen(jjtree)*/implements MiniJavaParserTreeConstants, MiniJavaParserConstants {/*@bgen(jjtree)*/
  protected static JJTMiniJavaParserState jjtree = new JJTMiniJavaParserState();

/************************************
 * The MiniJava Grammar Starts Here *
 ************************************/
  static final public void Goal() throws ParseException {
 /*@bgen(jjtree) Goal */
  ASTGoal jjtn000 = new ASTGoal(JJTGOAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      MainClass();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        TypeDeclaration();
      }
      jj_consume_token(0);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void MainClass() throws ParseException {
 /*@bgen(jjtree) MainClass */
        ASTMainClass jjtn000 = new ASTMainClass(JJTMAINCLASS);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(CLASS);
      t = Identifier();
      jj_consume_token(LBRACE);
      jj_consume_token(PUBLIC);
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(LPAREN);
      jj_consume_token(STRING);
      jj_consume_token(LSQPAREN);
      jj_consume_token(RSQPAREN);
      Identifier();
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      PrintStatement(new SymbId(new SymbId( t.image ),"main"));
      jj_consume_token(RBRACE);
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void TypeDeclaration() throws ParseException {
 /*@bgen(jjtree) TypeDeclaration */
  ASTTypeDeclaration jjtn000 = new ASTTypeDeclaration(JJTTYPEDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(3)) {
        ClassDeclaration();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          ClassExtendsDeclaration();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ClassDeclaration() throws ParseException {
 /*@bgen(jjtree) ClassDeclaration */
        ASTClassDeclaration jjtn000 = new ASTClassDeclaration(JJTCLASSDECLARATION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
        String oldPath="";
        Symbols.Class c;
        SymbId s_id;
        Symbols.Variable var;
        Symbols.Function func;
    try {
      jj_consume_token(CLASS);
      t = Identifier();
                s_id=new SymbId( t.image );
                c=new Symbols.Class( s_id, "", jjtn000.pos(jj_input_stream), null );
                jjtn000._types.put( s_id, c );
      jj_consume_token(LBRACE);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case INTEGER:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        var = VarDeclaration(s_id);
                                                c._variables.add(var);
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        func = MethodDeclaration(s_id);
                                        c._methods  .add(func);
      }
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void ClassExtendsDeclaration() throws ParseException {
 /*@bgen(jjtree) ClassExtendsDeclaration */
        ASTClassExtendsDeclaration jjtn000 = new ASTClassExtendsDeclaration(JJTCLASSEXTENDSDECLARATION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
        Token parentClass;
        String oldPath;
        Symbols.Class symbol;
        Symbols.Class c;
        SymbId s_id;
        Symbols.Variable var;
        Symbols.Function func;
    try {
      jj_consume_token(CLASS);
      t = Identifier();
      jj_consume_token(EXTENDS);
      parentClass = Identifier();
                s_id=new SymbId( t.image );

                c=new Symbols.Class( s_id, "",jjtn000.pos(jj_input_stream), parentClass.image );
                jjtn000._types.put( s_id, c );
      jj_consume_token(LBRACE);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case INTEGER:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        var = VarDeclaration(s_id);
                                                c._variables.add(var);
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_5;
        }
        func = MethodDeclaration(s_id);
                                        c._methods  .add(func);
      }
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public Symbols.Variable VarDeclaration(SymbId path) throws ParseException {
 /*@bgen(jjtree) VarDeclaration */
  ASTVarDeclaration jjtn000 = new ASTVarDeclaration(JJTVARDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
  String type;
  String pos;
  SymbId s_id;
  Symbols.Variable var;
    try {
          pos=jjtn000.pos(jj_input_stream);
      type = Type();
      t = Identifier();
      jj_consume_token(SEMICOLON);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                s_id=new SymbId(path,t.image);
                var=new Symbols.Variable(s_id,type,"",pos);
                jjtn000._symbols.put( s_id, var );
                {if (true) return var;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Symbols.Function MethodDeclaration(SymbId path) throws ParseException {
 /*@bgen(jjtree) MethodDeclaration */
  ASTMethodDeclaration jjtn000 = new ASTMethodDeclaration(JJTMETHODDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
  String type;
  Symbols.Function func;
  String pos;
  SymbId s_id;
    try {
    pos=jjtn000.pos(jj_input_stream);
      jj_consume_token(PUBLIC);
      type = Type();
      t = Identifier();
                s_id=new SymbId( path,t.image );
                func=new Symbols.Function( s_id,type,"",pos );
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:
        func._variables = FormalParameterList(s_id);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      label_6:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_6;
        }
        VarDeclaration(s_id);
      }
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACE:
        case IF:
        case WHILE:
        case PRINT:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_7;
        }
        Statement(s_id);
      }
      jj_consume_token(RETURN);
      Expression(s_id);
      jj_consume_token(SEMICOLON);
      jj_consume_token(RBRACE);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
                jjtn000._methods.put( s_id, func );
                {if (true) return func;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Vector<Symbols.Variable> FormalParameterList(SymbId path) throws ParseException {
        Vector<Symbols.Variable> list=new Vector<Symbols.Variable>();
        Symbols.Variable par;
    par = FormalParameter(path);
    list.add( par );
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 47:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_8;
      }
      par = FormalParameterRest(path);
          list.add( par );
    }
    {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  static final public Symbols.Variable FormalParameter(SymbId path) throws ParseException {
 /*@bgen(jjtree) FormalParameter */
  ASTFormalParameter jjtn000 = new ASTFormalParameter(JJTFORMALPARAMETER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
  String type;
  String pos;
  Symbols.Variable symb;
  SymbId s_id;
    try {
                pos=jjtn000.pos(jj_input_stream);
      type = Type();
      t = Identifier();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                s_id=new SymbId( path, t.image );
                symb=new Symbols.Variable( s_id,type,"",pos );
                jjtn000._symbols.put( s_id,symb );
                {if (true) return symb;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Symbols.Variable FormalParameterRest(SymbId path) throws ParseException {
  Symbols.Variable symb;
    jj_consume_token(47);
    symb = FormalParameter(path);
    {if (true) return symb;}
    throw new Error("Missing return statement in function");
  }

  static final public String Type() throws ParseException {
 /*@bgen(jjtree) Type */
        ASTType jjtn000 = new ASTType(JJTTYPE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
        String ret;
    try {
      if (jj_2_3(3)) {
        ret = ArrayType();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
          ret = BooleanType();
          break;
        case INTEGER:
          ret = IntegerType();
          break;
        case IDENTIFIER:
          t = Identifier();
                ret=t.image;
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return ret;}
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String ArrayType() throws ParseException {
 /*@bgen(jjtree) ArrayType */
  ASTArrayType jjtn000 = new ASTArrayType(JJTARRAYTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(INTEGER);
      jj_consume_token(LSQPAREN);
      jj_consume_token(RSQPAREN);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
                {if (true) return "int[]";}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String BooleanType() throws ParseException {
    jj_consume_token(BOOLEAN);
    {if (true) return "boolean";}
    throw new Error("Missing return statement in function");
  }

  static final public String IntegerType() throws ParseException {
    jj_consume_token(INTEGER);
    {if (true) return "int";}
    throw new Error("Missing return statement in function");
  }
